--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #fff;
     letter-spacing: .7px;
-    
+
 }
 
 body {
@@ -17,36 +17,44 @@ body {
     min-width: 720px;
     background-color: #181818;
 }
-img{
-    width:90%;
+
+img {
+    width: 90%;
 }
-.container-class{
+
+.container-class {
     background-color: #282828;
-    margin-left:-40px;
-    margin-right:-40px;
+    margin-left: -40px;
+    margin-right: -40px;
 }
-.box-row{
-   display:flex
+
+.box-row {
+    display: flex
 }
-.box-child-1{
+
+.box-child-1 {
     padding-left: 8%;
     padding-top: 3%;
     padding-bottom: 3%;
 }
-.box-child-2{   
+
+.box-child-2 {
     padding-top: 8%;
     padding-left: 3%;
 }
-.box-child-2 p{
-    line-height: 1.2 ;
-    margin-top: 0 ;
-    margin-bottom: 0 ;
+
+.box-child-2 p {
+    line-height: 1.2;
+    margin-top: 0;
+    margin-bottom: 0;
 
 }
-#profile{
-    font-size:3em;
-    font-weight:700;
+
+#profile {
+    font-size: 3em;
+    font-weight: 700;
 }
+
 #nowPlayingContainer {
     position: fixed;
     bottom: 0;
@@ -204,9 +212,10 @@ img{
 }
 
 .navBar .logo img {
-    width: 32px;
+    width: 60px;
     margin-bottom: 20px;
-    transform: scale(1.1);
+    margin-left: 30%;
+    /* transform: scale(1.1); */
 }
 
 .navBar .group {
@@ -547,5 +556,3 @@ img{
     color: #2ebd59;
     font-weight: 300;
 }
-
-
